--- a/whac-a-mole-master/styles.css
+++ b/whac-a-mole-master/styles.css
@@ -15,3 +15,9 @@
 	background-image: url("mole.jpg");
 	background-size: cover;
 }
+
+
+.cat {
+	background-image: url("cat.jpg");
+	background-size: cover;
+}
